<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    android:paddingStart="@dimen/main_layout_padding"
    tools:ignore="RtlSymmetry">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/rectangle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/green_box_top_margin"
            android:contentDescription="@string/blue_box_cont_descr"
            android:elevation="@dimen/green_box_elevation"
            android:src="@drawable/green_box"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/hello"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/hello_margin_top"
            android:text="@string/hello"
            android:textColor="@color/hello_text_color"
            android:textSize="@dimen/hello_font_size"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rectangle" />

        <TextView
            android:id="@+id/lets_introduce"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/lets_introduce_margin_top"
            android:layout_marginBottom="@dimen/lets_introduce_bottom_margin"
            android:text="@string/lets_introduce"
            android:textColor="@color/lets_introduce_text_color"
            android:textSize="@dimen/lets_introduce_font_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hello" />

        <LinearLayout
            android:id="@+id/linear_layout_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/full_name_layout_margin_top"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lets_introduce">

            <ImageView
                android:id="@+id/user_icon_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/input_field_icon_end_margin"
                android:contentDescription="@string/icon_image_cont_descr"
                android:src="@drawable/icon" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/full_name_hint"
                android:textColorHint="@color/input_field_hint_color"
                app:boxBackgroundMode="filled"
                app:boxStrokeColor="@color/box_stroke_color"
                app:boxStrokeWidth="@dimen/input_field_box_stroke">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/full_name_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:inputType="textPersonName"
                    android:textSize="@dimen/input_field_font_size"
                    tools:ignore="VisualLintTextFieldSize,TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_layout_2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/username_layout_margin_top"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linear_layout_1">

            <ImageView
                android:id="@+id/user_icon_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/input_field_icon_end_margin"
                android:contentDescription="@string/icon_image_cont_descr"
                android:src="@drawable/icon" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username_hint"
                android:textColorHint="@color/input_field_hint_color"
                app:boxBackgroundMode="filled"
                app:boxStrokeColor="@color/box_stroke_color"
                app:boxStrokeWidth="@dimen/input_field_box_stroke">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:inputType="textPersonName"
                    android:textSize="@dimen/input_field_font_size"
                    tools:ignore="VisualLintTextFieldSize,TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <!-- Buttons -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/buttons_margin_top"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linear_layout_2">

            <!-- BackBtn -->
            <ImageButton
                android:id="@+id/icon_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/back_button_shape"
                android:contentDescription="@string/back_button_cont_descr"
                android:padding="@dimen/back_button_padding"
                android:src="@drawable/baseline_arrow_back_24"
                app:tint="@color/back_button_icon_tint"
                tools:ignore="ImageContrastCheck" />

            <Space
                android:layout_width="@dimen/button_spacer_width"
                android:layout_height="wrap_content" />

            <!-- NextBtn -->
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/next_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/next_button_shape"
                android:contentDescription="@null"
                android:drawableEnd="@drawable/baseline_arrow_forward_24"
                android:drawablePadding="@dimen/next_button_icon_padding"
                android:drawableTint="@color/next_arrow_icon_tint"
                android:paddingHorizontal="@dimen/next_button_padding_horizontal"
                android:paddingVertical="@dimen/next_button_padding_vertical"
                android:text="@string/next_button"
                android:textColor="@color/next_button_text_color"
                android:textSize="@dimen/next_button_text_font_size"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>